# recordGrpc

./: CMakeLists.txt  README.md  cli.cpp  ser.cpp
json/: info.json
prase/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  UserInfo.cpp  UserInfo.h  WgConfig.cpp  WgConfig.h
protos/: CMakeLists.txt  hybrid_scope.grpc.pb.cc  hybrid_scope.grpc.pb.h  hybrid_scope.pb.cc  hybrid_scope.pb.h  hybrid_scope.proto
